--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.9.34",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
