--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "author": "Mirko Jelic <wd@mirkojelic.com>",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mirko965/hello_corona.git"
+  },
+  "homepage": "https://github.com/Mirko965/hello_corona.git",
   "dependencies": {
     "express": "^4.17.1",
     "path": "^0.12.7"
