--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ client/build
 .env.test.local
 .env.production.local
 
+/client/.env
+/client/.env.development.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
