change json file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "express server for react-app",
   "main": "index.js",
   "scripts": {
-    "server": "babel-watch -L index.js"
+    "start": "babel-watch -L index.js",
+    "heroku-postbuild": "cd ./client && npm install && npm run build"
+  },
+  "engines": {
+    "node": "12.16.x",
+    "npm": "6.x"
   },
   "author": "Mirko Jelic <wd@mirkojelic.com>",
   "license": "ISC",
