--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "validator": "^13.0.0"
   },
